<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".BienvenidaActivity">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slide_5_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp" />

    <ImageView
        android:id="@+id/imageSlide"
        android:contentDescription="@string/ctn_imgsp1"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/logo"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@id/welcomeText"/>


    <Button
        android:id="@+id/go_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageSlide"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40sp"
        android:background="@color/active_dots"
        android:padding="10dp"
        android:onClick="Guardar"
        android:text="@string/btn_comenzar"
        android:textColor="@color/letters"
        android:textSize="28sp" />
</RelativeLayout>